--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/cc6f51c7c0.js"
       crossorigin="anonymous"
@@ -109,6 +109,6 @@
       </div>
       <div id="setting-sun" class="sunset">🌅 Sunset: 8:25PM</div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
