Added Link to Github Repo

--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
           <div class="">86°----95°</div>
         </div>
       </div>
+
       <div id="setting-sun" class="sunset">🌅 Sunset: 8:25PM</div>
     </div>
+    <!-- Github Repository Link -->
+    <a href="https://github.com/ets12002/my-weather-app"> Github Repo</a>
     <script src="index.js"></script>
   </body>
 </html>
