Added search input to JS and Updated apiKey in JS

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="daytime" id="day-time"></div>
     <div class="main-info">
       <h1>Current Weather</h1>
-      <h2 id="city">New York</h2>
+      <h2 id="city"></h2>
       <div class="current-weather">
         <span id="temperature" class="current-temp">76</span>
 
